--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,14 @@ fieldset {
   height: 150px;
   border-radius: 50%;
 }
+table {
+  text-align: center;
+  border-radius: 10px;
+  border-collapse: collapse;
+}
+
+td,
+th {
+  padding: 8px;
+  border: 1px solid black;
+}
